# marshmallow-meta

./: .gitignore  LICENSE  README.md  setup.cfg
src/marshmallow_meta/: __init__.py
