[metadata]
name = marshmallow-meta
version = 0.0.1
author = Jared Deckard
author_email = jared@shademaps.com
description = decorator syntax for marshmallow meta attributes (with inheritance)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deckar01/marshmallow-meta
project_urls =
    Bug Tracker = https://github.com/pypa/deckar01/marshmallow-meta/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
